TP/y.output
Terminals unused in grammar

   NOT
   LLAVEA
   LLAVEC


Estado 64 conflictos: 6 desplazamiento(s)/reducción(ones)
Estado 74 conflictos: 7 desplazamiento(s)/reducción(ones)
Estado 92 conflictos: 6 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: inicio $end

    1 inicio: programa

    2 programa: sentencia
    3         | programa sentencia

    4 sentencia: asignacion
    5          | iteracion
    6          | seleccion
    7          | declaracion
    8          | display
    9          | get
   10          | equmax
   11          | equmin

   12 equmax: IF EQUMAX PARA expresionEqu PYC CORCHA listaEqu CORCHC PARC

   13 equmin: IF EQUMIN PARA expresionEqu PYC CORCHA listaEqu CORCHC PARC

   14 listaEqu: factorEqu
   15         | listaEqu COMA factorEqu

   16 expresionEqu: terminoEqu
   17             | expresionEqu OP_SUM terminoEqu
   18             | expresionEqu OP_RESTA terminoEqu

   19 terminoEqu: factorEqu
   20           | terminoEqu OP_MULT factorEqu
   21           | terminoEqu OP_DIV factorEqu

   22 factorEqu: ID
   23          | CTE_E
   24          | CTE_R

   25 declaracion: DIM CORCHA listaVarDec CORCHC AS CORCHA listaVarType CORCHC

   26 listaVarDec: ID
   27            | listaVarDec COMA ID

   28 listaVarType: TYPE
   29             | listaVarType COMA TYPE

   30 TYPE: INTEGER
   31     | STRING
   32     | REAL

   33 asignacion: ID OP_ASIG expresion

   34 expresion: termino
   35          | expresion OP_SUM termino
   36          | expresion OP_RESTA termino

   37 termino: factor
   38        | termino OP_MULT factor
   39        | termino OP_DIV factor

   40 factor: PARA expresion PARC
   41       | ID
   42       | CTE_E
   43       | CTE_R
   44       | CTE_S

   45 iteracion: WHILE condicion THEN programa

   46 seleccion: IF condicion THEN programa
   47          | IF condicion THEN programa ELSE programa

   48 condicion: comparacion
   49          | condicion AND comparacion
   50          | condicion OR comparacion

   51 comparacion: expresion comparador expresion

   52 comparador: MENOR_IGUAL
   53           | MAYOR_IGUAL
   54           | MENOR
   55           | MAYOR
   56           | DIFF
   57           | IGUAL

   58 display: DISPLAY factor

   59 get: GET factor


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
ID (258) 22 26 27 33 41
CTE_S (259) 44
CTE_E (260) 23 42
CTE_R (261) 24 43
GET (262) 59
DISPLAY (263) 58
EQUMAX (264) 12
EQUMIN (265) 13
WHILE (266) 45
THEN (267) 45 46 47
IF (268) 12 13 46 47
ELSE (269) 47
NOT (270)
AND (271) 49
OR (272) 50
OP_ASIG (273) 33
COMA (274) 15 27 29
PYC (275) 12 13
OP_SUM (276) 17 35
OP_RESTA (277) 18 36
OP_MULT (278) 20 38
OP_DIV (279) 21 39
CORCHA (280) 12 13 25
CORCHC (281) 12 13 25
PARA (282) 12 13 40
PARC (283) 12 13 40
LLAVEA (284)
LLAVEC (285)
MENOR_IGUAL (286) 52
MAYOR_IGUAL (287) 53
MENOR (288) 54
MAYOR (289) 55
DIFF (290) 56
IGUAL (291) 57
DIM (292) 25
AS (293) 25
INTEGER (294) 30
STRING (295) 31
REAL (296) 32


No terminales con las reglas donde aparecen

$accept (42)
    en la izquierda: 0
inicio (43)
    en la izquierda: 1, en la derecha: 0
programa (44)
    en la izquierda: 2 3, en la derecha: 1 3 45 46 47
sentencia (45)
    en la izquierda: 4 5 6 7 8 9 10 11, en la derecha: 2 3
equmax (46)
    en la izquierda: 12, en la derecha: 10
equmin (47)
    en la izquierda: 13, en la derecha: 11
listaEqu (48)
    en la izquierda: 14 15, en la derecha: 12 13 15
expresionEqu (49)
    en la izquierda: 16 17 18, en la derecha: 12 13 17 18
terminoEqu (50)
    en la izquierda: 19 20 21, en la derecha: 16 17 18 20 21
factorEqu (51)
    en la izquierda: 22 23 24, en la derecha: 14 15 19 20 21
declaracion (52)
    en la izquierda: 25, en la derecha: 7
listaVarDec (53)
    en la izquierda: 26 27, en la derecha: 25 27
listaVarType (54)
    en la izquierda: 28 29, en la derecha: 25 29
TYPE (55)
    en la izquierda: 30 31 32, en la derecha: 28 29
asignacion (56)
    en la izquierda: 33, en la derecha: 4
expresion (57)
    en la izquierda: 34 35 36, en la derecha: 33 35 36 40 51
termino (58)
    en la izquierda: 37 38 39, en la derecha: 34 35 36 38 39
factor (59)
    en la izquierda: 40 41 42 43 44, en la derecha: 37 38 39 58 59
iteracion (60)
    en la izquierda: 45, en la derecha: 5
seleccion (61)
    en la izquierda: 46 47, en la derecha: 6
condicion (62)
    en la izquierda: 48 49 50, en la derecha: 45 46 47 49 50
comparacion (63)
    en la izquierda: 51, en la derecha: 48 49 50
comparador (64)
    en la izquierda: 52 53 54 55 56 57, en la derecha: 51
display (65)
    en la izquierda: 58, en la derecha: 8
get (66)
    en la izquierda: 59, en la derecha: 9


estado 0

    0 $accept: . inicio $end

    ID       desplazar e ir al estado 1
    GET      desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    WHILE    desplazar e ir al estado 4
    IF       desplazar e ir al estado 5
    DIM      desplazar e ir al estado 6

    inicio       ir al estado 7
    programa     ir al estado 8
    sentencia    ir al estado 9
    equmax       ir al estado 10
    equmin       ir al estado 11
    declaracion  ir al estado 12
    asignacion   ir al estado 13
    iteracion    ir al estado 14
    seleccion    ir al estado 15
    display      ir al estado 16
    get          ir al estado 17


estado 1

   33 asignacion: ID . OP_ASIG expresion

    OP_ASIG  desplazar e ir al estado 18


estado 2

   59 get: GET . factor

    ID     desplazar e ir al estado 19
    CTE_S  desplazar e ir al estado 20
    CTE_E  desplazar e ir al estado 21
    CTE_R  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23

    factor  ir al estado 24


estado 3

   58 display: DISPLAY . factor

    ID     desplazar e ir al estado 19
    CTE_S  desplazar e ir al estado 20
    CTE_E  desplazar e ir al estado 21
    CTE_R  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23

    factor  ir al estado 25


estado 4

   45 iteracion: WHILE . condicion THEN programa

    ID     desplazar e ir al estado 19
    CTE_S  desplazar e ir al estado 20
    CTE_E  desplazar e ir al estado 21
    CTE_R  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23

    expresion    ir al estado 26
    termino      ir al estado 27
    factor       ir al estado 28
    condicion    ir al estado 29
    comparacion  ir al estado 30


estado 5

   12 equmax: IF . EQUMAX PARA expresionEqu PYC CORCHA listaEqu CORCHC PARC
   13 equmin: IF . EQUMIN PARA expresionEqu PYC CORCHA listaEqu CORCHC PARC
   46 seleccion: IF . condicion THEN programa
   47          | IF . condicion THEN programa ELSE programa

    ID      desplazar e ir al estado 19
    CTE_S   desplazar e ir al estado 20
    CTE_E   desplazar e ir al estado 21
    CTE_R   desplazar e ir al estado 22
    EQUMAX  desplazar e ir al estado 31
    EQUMIN  desplazar e ir al estado 32
    PARA    desplazar e ir al estado 23

    expresion    ir al estado 26
    termino      ir al estado 27
    factor       ir al estado 28
    condicion    ir al estado 33
    comparacion  ir al estado 30


estado 6

   25 declaracion: DIM . CORCHA listaVarDec CORCHC AS CORCHA listaVarType CORCHC

    CORCHA  desplazar e ir al estado 34


estado 7

    0 $accept: inicio . $end

    $end  desplazar e ir al estado 35


estado 8

    1 inicio: programa .
    3 programa: programa . sentencia

    ID       desplazar e ir al estado 1
    GET      desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    WHILE    desplazar e ir al estado 4
    IF       desplazar e ir al estado 5
    DIM      desplazar e ir al estado 6

    $default  reduce usando la regla 1 (inicio)

    sentencia    ir al estado 36
    equmax       ir al estado 10
    equmin       ir al estado 11
    declaracion  ir al estado 12
    asignacion   ir al estado 13
    iteracion    ir al estado 14
    seleccion    ir al estado 15
    display      ir al estado 16
    get          ir al estado 17


estado 9

    2 programa: sentencia .

    $default  reduce usando la regla 2 (programa)


estado 10

   10 sentencia: equmax .

    $default  reduce usando la regla 10 (sentencia)


estado 11

   11 sentencia: equmin .

    $default  reduce usando la regla 11 (sentencia)


estado 12

    7 sentencia: declaracion .

    $default  reduce usando la regla 7 (sentencia)


estado 13

    4 sentencia: asignacion .

    $default  reduce usando la regla 4 (sentencia)


estado 14

    5 sentencia: iteracion .

    $default  reduce usando la regla 5 (sentencia)


estado 15

    6 sentencia: seleccion .

    $default  reduce usando la regla 6 (sentencia)


estado 16

    8 sentencia: display .

    $default  reduce usando la regla 8 (sentencia)


estado 17

    9 sentencia: get .

    $default  reduce usando la regla 9 (sentencia)


estado 18

   33 asignacion: ID OP_ASIG . expresion

    ID     desplazar e ir al estado 19
    CTE_S  desplazar e ir al estado 20
    CTE_E  desplazar e ir al estado 21
    CTE_R  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23

    expresion  ir al estado 37
    termino    ir al estado 27
    factor     ir al estado 28


estado 19

   41 factor: ID .

    $default  reduce usando la regla 41 (factor)


estado 20

   44 factor: CTE_S .

    $default  reduce usando la regla 44 (factor)


estado 21

   42 factor: CTE_E .

    $default  reduce usando la regla 42 (factor)


estado 22

   43 factor: CTE_R .

    $default  reduce usando la regla 43 (factor)


estado 23

   40 factor: PARA . expresion PARC

    ID     desplazar e ir al estado 19
    CTE_S  desplazar e ir al estado 20
    CTE_E  desplazar e ir al estado 21
    CTE_R  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23

    expresion  ir al estado 38
    termino    ir al estado 27
    factor     ir al estado 28


estado 24

   59 get: GET factor .

    $default  reduce usando la regla 59 (get)


estado 25

   58 display: DISPLAY factor .

    $default  reduce usando la regla 58 (display)


estado 26

   35 expresion: expresion . OP_SUM termino
   36          | expresion . OP_RESTA termino
   51 comparacion: expresion . comparador expresion

    OP_SUM       desplazar e ir al estado 39
    OP_RESTA     desplazar e ir al estado 40
    MENOR_IGUAL  desplazar e ir al estado 41
    MAYOR_IGUAL  desplazar e ir al estado 42
    MENOR        desplazar e ir al estado 43
    MAYOR        desplazar e ir al estado 44
    DIFF         desplazar e ir al estado 45
    IGUAL        desplazar e ir al estado 46

    comparador  ir al estado 47


estado 27

   34 expresion: termino .
   38 termino: termino . OP_MULT factor
   39        | termino . OP_DIV factor

    OP_MULT  desplazar e ir al estado 48
    OP_DIV   desplazar e ir al estado 49

    $default  reduce usando la regla 34 (expresion)


estado 28

   37 termino: factor .

    $default  reduce usando la regla 37 (termino)


estado 29

   45 iteracion: WHILE condicion . THEN programa
   49 condicion: condicion . AND comparacion
   50          | condicion . OR comparacion

    THEN  desplazar e ir al estado 50
    AND   desplazar e ir al estado 51
    OR    desplazar e ir al estado 52


estado 30

   48 condicion: comparacion .

    $default  reduce usando la regla 48 (condicion)


estado 31

   12 equmax: IF EQUMAX . PARA expresionEqu PYC CORCHA listaEqu CORCHC PARC

    PARA  desplazar e ir al estado 53


estado 32

   13 equmin: IF EQUMIN . PARA expresionEqu PYC CORCHA listaEqu CORCHC PARC

    PARA  desplazar e ir al estado 54


estado 33

   46 seleccion: IF condicion . THEN programa
   47          | IF condicion . THEN programa ELSE programa
   49 condicion: condicion . AND comparacion
   50          | condicion . OR comparacion

    THEN  desplazar e ir al estado 55
    AND   desplazar e ir al estado 51
    OR    desplazar e ir al estado 52


estado 34

   25 declaracion: DIM CORCHA . listaVarDec CORCHC AS CORCHA listaVarType CORCHC

    ID  desplazar e ir al estado 56

    listaVarDec  ir al estado 57


estado 35

    0 $accept: inicio $end .

    $default  aceptar


estado 36

    3 programa: programa sentencia .

    $default  reduce usando la regla 3 (programa)


estado 37

   33 asignacion: ID OP_ASIG expresion .
   35 expresion: expresion . OP_SUM termino
   36          | expresion . OP_RESTA termino

    OP_SUM    desplazar e ir al estado 39
    OP_RESTA  desplazar e ir al estado 40

    $default  reduce usando la regla 33 (asignacion)


estado 38

   35 expresion: expresion . OP_SUM termino
   36          | expresion . OP_RESTA termino
   40 factor: PARA expresion . PARC

    OP_SUM    desplazar e ir al estado 39
    OP_RESTA  desplazar e ir al estado 40
    PARC      desplazar e ir al estado 58


estado 39

   35 expresion: expresion OP_SUM . termino

    ID     desplazar e ir al estado 19
    CTE_S  desplazar e ir al estado 20
    CTE_E  desplazar e ir al estado 21
    CTE_R  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23

    termino  ir al estado 59
    factor   ir al estado 28


estado 40

   36 expresion: expresion OP_RESTA . termino

    ID     desplazar e ir al estado 19
    CTE_S  desplazar e ir al estado 20
    CTE_E  desplazar e ir al estado 21
    CTE_R  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23

    termino  ir al estado 60
    factor   ir al estado 28


estado 41

   52 comparador: MENOR_IGUAL .

    $default  reduce usando la regla 52 (comparador)


estado 42

   53 comparador: MAYOR_IGUAL .

    $default  reduce usando la regla 53 (comparador)


estado 43

   54 comparador: MENOR .

    $default  reduce usando la regla 54 (comparador)


estado 44

   55 comparador: MAYOR .

    $default  reduce usando la regla 55 (comparador)


estado 45

   56 comparador: DIFF .

    $default  reduce usando la regla 56 (comparador)


estado 46

   57 comparador: IGUAL .

    $default  reduce usando la regla 57 (comparador)


estado 47

   51 comparacion: expresion comparador . expresion

    ID     desplazar e ir al estado 19
    CTE_S  desplazar e ir al estado 20
    CTE_E  desplazar e ir al estado 21
    CTE_R  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23

    expresion  ir al estado 61
    termino    ir al estado 27
    factor     ir al estado 28


estado 48

   38 termino: termino OP_MULT . factor

    ID     desplazar e ir al estado 19
    CTE_S  desplazar e ir al estado 20
    CTE_E  desplazar e ir al estado 21
    CTE_R  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23

    factor  ir al estado 62


estado 49

   39 termino: termino OP_DIV . factor

    ID     desplazar e ir al estado 19
    CTE_S  desplazar e ir al estado 20
    CTE_E  desplazar e ir al estado 21
    CTE_R  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23

    factor  ir al estado 63


estado 50

   45 iteracion: WHILE condicion THEN . programa

    ID       desplazar e ir al estado 1
    GET      desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    WHILE    desplazar e ir al estado 4
    IF       desplazar e ir al estado 5
    DIM      desplazar e ir al estado 6

    programa     ir al estado 64
    sentencia    ir al estado 9
    equmax       ir al estado 10
    equmin       ir al estado 11
    declaracion  ir al estado 12
    asignacion   ir al estado 13
    iteracion    ir al estado 14
    seleccion    ir al estado 15
    display      ir al estado 16
    get          ir al estado 17


estado 51

   49 condicion: condicion AND . comparacion

    ID     desplazar e ir al estado 19
    CTE_S  desplazar e ir al estado 20
    CTE_E  desplazar e ir al estado 21
    CTE_R  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23

    expresion    ir al estado 26
    termino      ir al estado 27
    factor       ir al estado 28
    comparacion  ir al estado 65


estado 52

   50 condicion: condicion OR . comparacion

    ID     desplazar e ir al estado 19
    CTE_S  desplazar e ir al estado 20
    CTE_E  desplazar e ir al estado 21
    CTE_R  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23

    expresion    ir al estado 26
    termino      ir al estado 27
    factor       ir al estado 28
    comparacion  ir al estado 66


estado 53

   12 equmax: IF EQUMAX PARA . expresionEqu PYC CORCHA listaEqu CORCHC PARC

    ID     desplazar e ir al estado 67
    CTE_E  desplazar e ir al estado 68
    CTE_R  desplazar e ir al estado 69

    expresionEqu  ir al estado 70
    terminoEqu    ir al estado 71
    factorEqu     ir al estado 72


estado 54

   13 equmin: IF EQUMIN PARA . expresionEqu PYC CORCHA listaEqu CORCHC PARC

    ID     desplazar e ir al estado 67
    CTE_E  desplazar e ir al estado 68
    CTE_R  desplazar e ir al estado 69

    expresionEqu  ir al estado 73
    terminoEqu    ir al estado 71
    factorEqu     ir al estado 72


estado 55

   46 seleccion: IF condicion THEN . programa
   47          | IF condicion THEN . programa ELSE programa

    ID       desplazar e ir al estado 1
    GET      desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    WHILE    desplazar e ir al estado 4
    IF       desplazar e ir al estado 5
    DIM      desplazar e ir al estado 6

    programa     ir al estado 74
    sentencia    ir al estado 9
    equmax       ir al estado 10
    equmin       ir al estado 11
    declaracion  ir al estado 12
    asignacion   ir al estado 13
    iteracion    ir al estado 14
    seleccion    ir al estado 15
    display      ir al estado 16
    get          ir al estado 17


estado 56

   26 listaVarDec: ID .

    $default  reduce usando la regla 26 (listaVarDec)


estado 57

   25 declaracion: DIM CORCHA listaVarDec . CORCHC AS CORCHA listaVarType CORCHC
   27 listaVarDec: listaVarDec . COMA ID

    COMA    desplazar e ir al estado 75
    CORCHC  desplazar e ir al estado 76


estado 58

   40 factor: PARA expresion PARC .

    $default  reduce usando la regla 40 (factor)


estado 59

   35 expresion: expresion OP_SUM termino .
   38 termino: termino . OP_MULT factor
   39        | termino . OP_DIV factor

    OP_MULT  desplazar e ir al estado 48
    OP_DIV   desplazar e ir al estado 49

    $default  reduce usando la regla 35 (expresion)


estado 60

   36 expresion: expresion OP_RESTA termino .
   38 termino: termino . OP_MULT factor
   39        | termino . OP_DIV factor

    OP_MULT  desplazar e ir al estado 48
    OP_DIV   desplazar e ir al estado 49

    $default  reduce usando la regla 36 (expresion)


estado 61

   35 expresion: expresion . OP_SUM termino
   36          | expresion . OP_RESTA termino
   51 comparacion: expresion comparador expresion .

    OP_SUM    desplazar e ir al estado 39
    OP_RESTA  desplazar e ir al estado 40

    $default  reduce usando la regla 51 (comparacion)


estado 62

   38 termino: termino OP_MULT factor .

    $default  reduce usando la regla 38 (termino)


estado 63

   39 termino: termino OP_DIV factor .

    $default  reduce usando la regla 39 (termino)


estado 64

    3 programa: programa . sentencia
   45 iteracion: WHILE condicion THEN programa .

    ID       desplazar e ir al estado 1
    GET      desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    WHILE    desplazar e ir al estado 4
    IF       desplazar e ir al estado 5
    DIM      desplazar e ir al estado 6

    ID        [reduce usando la regla 45 (iteracion)]
    GET       [reduce usando la regla 45 (iteracion)]
    DISPLAY   [reduce usando la regla 45 (iteracion)]
    WHILE     [reduce usando la regla 45 (iteracion)]
    IF        [reduce usando la regla 45 (iteracion)]
    DIM       [reduce usando la regla 45 (iteracion)]
    $default  reduce usando la regla 45 (iteracion)

    sentencia    ir al estado 36
    equmax       ir al estado 10
    equmin       ir al estado 11
    declaracion  ir al estado 12
    asignacion   ir al estado 13
    iteracion    ir al estado 14
    seleccion    ir al estado 15
    display      ir al estado 16
    get          ir al estado 17


estado 65

   49 condicion: condicion AND comparacion .

    $default  reduce usando la regla 49 (condicion)


estado 66

   50 condicion: condicion OR comparacion .

    $default  reduce usando la regla 50 (condicion)


estado 67

   22 factorEqu: ID .

    $default  reduce usando la regla 22 (factorEqu)


estado 68

   23 factorEqu: CTE_E .

    $default  reduce usando la regla 23 (factorEqu)


estado 69

   24 factorEqu: CTE_R .

    $default  reduce usando la regla 24 (factorEqu)


estado 70

   12 equmax: IF EQUMAX PARA expresionEqu . PYC CORCHA listaEqu CORCHC PARC
   17 expresionEqu: expresionEqu . OP_SUM terminoEqu
   18             | expresionEqu . OP_RESTA terminoEqu

    PYC       desplazar e ir al estado 77
    OP_SUM    desplazar e ir al estado 78
    OP_RESTA  desplazar e ir al estado 79


estado 71

   16 expresionEqu: terminoEqu .
   20 terminoEqu: terminoEqu . OP_MULT factorEqu
   21           | terminoEqu . OP_DIV factorEqu

    OP_MULT  desplazar e ir al estado 80
    OP_DIV   desplazar e ir al estado 81

    $default  reduce usando la regla 16 (expresionEqu)


estado 72

   19 terminoEqu: factorEqu .

    $default  reduce usando la regla 19 (terminoEqu)


estado 73

   13 equmin: IF EQUMIN PARA expresionEqu . PYC CORCHA listaEqu CORCHC PARC
   17 expresionEqu: expresionEqu . OP_SUM terminoEqu
   18             | expresionEqu . OP_RESTA terminoEqu

    PYC       desplazar e ir al estado 82
    OP_SUM    desplazar e ir al estado 78
    OP_RESTA  desplazar e ir al estado 79


estado 74

    3 programa: programa . sentencia
   46 seleccion: IF condicion THEN programa .
   47          | IF condicion THEN programa . ELSE programa

    ID       desplazar e ir al estado 1
    GET      desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    WHILE    desplazar e ir al estado 4
    IF       desplazar e ir al estado 5
    ELSE     desplazar e ir al estado 83
    DIM      desplazar e ir al estado 6

    ID        [reduce usando la regla 46 (seleccion)]
    GET       [reduce usando la regla 46 (seleccion)]
    DISPLAY   [reduce usando la regla 46 (seleccion)]
    WHILE     [reduce usando la regla 46 (seleccion)]
    IF        [reduce usando la regla 46 (seleccion)]
    ELSE      [reduce usando la regla 46 (seleccion)]
    DIM       [reduce usando la regla 46 (seleccion)]
    $default  reduce usando la regla 46 (seleccion)

    sentencia    ir al estado 36
    equmax       ir al estado 10
    equmin       ir al estado 11
    declaracion  ir al estado 12
    asignacion   ir al estado 13
    iteracion    ir al estado 14
    seleccion    ir al estado 15
    display      ir al estado 16
    get          ir al estado 17


estado 75

   27 listaVarDec: listaVarDec COMA . ID

    ID  desplazar e ir al estado 84


estado 76

   25 declaracion: DIM CORCHA listaVarDec CORCHC . AS CORCHA listaVarType CORCHC

    AS  desplazar e ir al estado 85


estado 77

   12 equmax: IF EQUMAX PARA expresionEqu PYC . CORCHA listaEqu CORCHC PARC

    CORCHA  desplazar e ir al estado 86


estado 78

   17 expresionEqu: expresionEqu OP_SUM . terminoEqu

    ID     desplazar e ir al estado 67
    CTE_E  desplazar e ir al estado 68
    CTE_R  desplazar e ir al estado 69

    terminoEqu  ir al estado 87
    factorEqu   ir al estado 72


estado 79

   18 expresionEqu: expresionEqu OP_RESTA . terminoEqu

    ID     desplazar e ir al estado 67
    CTE_E  desplazar e ir al estado 68
    CTE_R  desplazar e ir al estado 69

    terminoEqu  ir al estado 88
    factorEqu   ir al estado 72


estado 80

   20 terminoEqu: terminoEqu OP_MULT . factorEqu

    ID     desplazar e ir al estado 67
    CTE_E  desplazar e ir al estado 68
    CTE_R  desplazar e ir al estado 69

    factorEqu  ir al estado 89


estado 81

   21 terminoEqu: terminoEqu OP_DIV . factorEqu

    ID     desplazar e ir al estado 67
    CTE_E  desplazar e ir al estado 68
    CTE_R  desplazar e ir al estado 69

    factorEqu  ir al estado 90


estado 82

   13 equmin: IF EQUMIN PARA expresionEqu PYC . CORCHA listaEqu CORCHC PARC

    CORCHA  desplazar e ir al estado 91


estado 83

   47 seleccion: IF condicion THEN programa ELSE . programa

    ID       desplazar e ir al estado 1
    GET      desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    WHILE    desplazar e ir al estado 4
    IF       desplazar e ir al estado 5
    DIM      desplazar e ir al estado 6

    programa     ir al estado 92
    sentencia    ir al estado 9
    equmax       ir al estado 10
    equmin       ir al estado 11
    declaracion  ir al estado 12
    asignacion   ir al estado 13
    iteracion    ir al estado 14
    seleccion    ir al estado 15
    display      ir al estado 16
    get          ir al estado 17


estado 84

   27 listaVarDec: listaVarDec COMA ID .

    $default  reduce usando la regla 27 (listaVarDec)


estado 85

   25 declaracion: DIM CORCHA listaVarDec CORCHC AS . CORCHA listaVarType CORCHC

    CORCHA  desplazar e ir al estado 93


estado 86

   12 equmax: IF EQUMAX PARA expresionEqu PYC CORCHA . listaEqu CORCHC PARC

    ID     desplazar e ir al estado 67
    CTE_E  desplazar e ir al estado 68
    CTE_R  desplazar e ir al estado 69

    listaEqu   ir al estado 94
    factorEqu  ir al estado 95


estado 87

   17 expresionEqu: expresionEqu OP_SUM terminoEqu .
   20 terminoEqu: terminoEqu . OP_MULT factorEqu
   21           | terminoEqu . OP_DIV factorEqu

    OP_MULT  desplazar e ir al estado 80
    OP_DIV   desplazar e ir al estado 81

    $default  reduce usando la regla 17 (expresionEqu)


estado 88

   18 expresionEqu: expresionEqu OP_RESTA terminoEqu .
   20 terminoEqu: terminoEqu . OP_MULT factorEqu
   21           | terminoEqu . OP_DIV factorEqu

    OP_MULT  desplazar e ir al estado 80
    OP_DIV   desplazar e ir al estado 81

    $default  reduce usando la regla 18 (expresionEqu)


estado 89

   20 terminoEqu: terminoEqu OP_MULT factorEqu .

    $default  reduce usando la regla 20 (terminoEqu)


estado 90

   21 terminoEqu: terminoEqu OP_DIV factorEqu .

    $default  reduce usando la regla 21 (terminoEqu)


estado 91

   13 equmin: IF EQUMIN PARA expresionEqu PYC CORCHA . listaEqu CORCHC PARC

    ID     desplazar e ir al estado 67
    CTE_E  desplazar e ir al estado 68
    CTE_R  desplazar e ir al estado 69

    listaEqu   ir al estado 96
    factorEqu  ir al estado 95


estado 92

    3 programa: programa . sentencia
   47 seleccion: IF condicion THEN programa ELSE programa .

    ID       desplazar e ir al estado 1
    GET      desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    WHILE    desplazar e ir al estado 4
    IF       desplazar e ir al estado 5
    DIM      desplazar e ir al estado 6

    ID        [reduce usando la regla 47 (seleccion)]
    GET       [reduce usando la regla 47 (seleccion)]
    DISPLAY   [reduce usando la regla 47 (seleccion)]
    WHILE     [reduce usando la regla 47 (seleccion)]
    IF        [reduce usando la regla 47 (seleccion)]
    DIM       [reduce usando la regla 47 (seleccion)]
    $default  reduce usando la regla 47 (seleccion)

    sentencia    ir al estado 36
    equmax       ir al estado 10
    equmin       ir al estado 11
    declaracion  ir al estado 12
    asignacion   ir al estado 13
    iteracion    ir al estado 14
    seleccion    ir al estado 15
    display      ir al estado 16
    get          ir al estado 17


estado 93

   25 declaracion: DIM CORCHA listaVarDec CORCHC AS CORCHA . listaVarType CORCHC

    INTEGER  desplazar e ir al estado 97
    STRING   desplazar e ir al estado 98
    REAL     desplazar e ir al estado 99

    listaVarType  ir al estado 100
    TYPE          ir al estado 101


estado 94

   12 equmax: IF EQUMAX PARA expresionEqu PYC CORCHA listaEqu . CORCHC PARC
   15 listaEqu: listaEqu . COMA factorEqu

    COMA    desplazar e ir al estado 102
    CORCHC  desplazar e ir al estado 103


estado 95

   14 listaEqu: factorEqu .

    $default  reduce usando la regla 14 (listaEqu)


estado 96

   13 equmin: IF EQUMIN PARA expresionEqu PYC CORCHA listaEqu . CORCHC PARC
   15 listaEqu: listaEqu . COMA factorEqu

    COMA    desplazar e ir al estado 102
    CORCHC  desplazar e ir al estado 104


estado 97

   30 TYPE: INTEGER .

    $default  reduce usando la regla 30 (TYPE)


estado 98

   31 TYPE: STRING .

    $default  reduce usando la regla 31 (TYPE)


estado 99

   32 TYPE: REAL .

    $default  reduce usando la regla 32 (TYPE)


estado 100

   25 declaracion: DIM CORCHA listaVarDec CORCHC AS CORCHA listaVarType . CORCHC
   29 listaVarType: listaVarType . COMA TYPE

    COMA    desplazar e ir al estado 105
    CORCHC  desplazar e ir al estado 106


estado 101

   28 listaVarType: TYPE .

    $default  reduce usando la regla 28 (listaVarType)


estado 102

   15 listaEqu: listaEqu COMA . factorEqu

    ID     desplazar e ir al estado 67
    CTE_E  desplazar e ir al estado 68
    CTE_R  desplazar e ir al estado 69

    factorEqu  ir al estado 107


estado 103

   12 equmax: IF EQUMAX PARA expresionEqu PYC CORCHA listaEqu CORCHC . PARC

    PARC  desplazar e ir al estado 108


estado 104

   13 equmin: IF EQUMIN PARA expresionEqu PYC CORCHA listaEqu CORCHC . PARC

    PARC  desplazar e ir al estado 109


estado 105

   29 listaVarType: listaVarType COMA . TYPE

    INTEGER  desplazar e ir al estado 97
    STRING   desplazar e ir al estado 98
    REAL     desplazar e ir al estado 99

    TYPE  ir al estado 110


estado 106

   25 declaracion: DIM CORCHA listaVarDec CORCHC AS CORCHA listaVarType CORCHC .

    $default  reduce usando la regla 25 (declaracion)


estado 107

   15 listaEqu: listaEqu COMA factorEqu .

    $default  reduce usando la regla 15 (listaEqu)


estado 108

   12 equmax: IF EQUMAX PARA expresionEqu PYC CORCHA listaEqu CORCHC PARC .

    $default  reduce usando la regla 12 (equmax)


estado 109

   13 equmin: IF EQUMIN PARA expresionEqu PYC CORCHA listaEqu CORCHC PARC .

    $default  reduce usando la regla 13 (equmin)


estado 110

   29 listaVarType: listaVarType COMA TYPE .

    $default  reduce usando la regla 29 (listaVarType)
